# mlim

./: .flake8  Document.mlim  LICENSE  Makefile  README.md  makefile  mlim.sh  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
backend/: README.md  app.py  evaluation.py  gradient_descent.py  graph_gradient_descent.py  lexer.py  main.py  model.py  ourMath.py  parser.py  requirements.txt  run_lexer.py
backend/app/: app.py
backend/fixtures/: bmatrix_one_d.tex  line_of_multiple_number.tex  line_of_number_and_binop.tex  somme.tex
backend/tests/: bmatrix_1d.tex  bmatrix_2d.tex  bmatrix_add.tex  bmatrix_mul.tex  evaluation_function.tex  evaluation_matrix_cell.tex  simple_product.tex  simple_sum.tex  store_test.tex
backend/utils/: math.py
compiler/: README.md  evaluation.py  gradient_descent.py  lexer.py  model.py  ourMath.py  parser.py  utils.py
compiler/tests/: test.py
fixtures/: assign_function.tex  assign_matrix.tex  assign_value.tex  assign_var.tex  bmatrix_2d.tex  bmatrix_formula.tex  bmatrix_of_binops_mul.tex  evaluation_function.tex  evaluation_matrix_cell.tex  paren_formula.tex  simplify_binop.tex  simplify_function.tex  simplify_unop.tex
fixtures/mlim/: presentation.mlim
frontend/: .prettierignore  package-lock.json  package.json
frontend/components/: Cell.tsx  CellContent.tsx  CellHeader.tsx  Cells.tsx  Katex.js  Katex.tsx  Workspace.js  repl.js
frontend/constants/: keys.js
frontend/models/: cells.ts  chart-props.ts
frontend/pages/: index.js  (+3 more)
frontendts/: package-lock.json  package.json  tsconfig.json
(+29 files in other folders)
