[tool.poetry]
name = "mlim"
version = "0.1.0"
description = ""
authors = ["mlgarchery <martial.garchery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
