[tool.poetry]
name = "mlim"
version = "0.1.0"
description = ""
authors = ["mlgarchery <martial.garchery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-compiler = "poetry.core.masonry.api"
